project/stage/tests/reject/bad_func_decl/multiple_params_missing_id.ul
int [100] _123456_FooZ (int , float _____1) { }
